# stm32

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  cpp_runtime.c  main.c  main.cpp  notes.md  startup_stm32f411xe.s  stm32f411re.ld  toolchain.cmake
drivers/: CMakeLists.txt
drivers/commonlib/: CMakeLists.txt  utils.h
drivers/gpio/: CMakeLists.txt  gpio_common.h  gpio_driver.cpp  gpio_driver.h
ld/: stm32f411re.ld
libs/logging/: CMakeLists.txt  printf.cpp
src/: CMakeLists.txt  delay.cpp  delay.h  gpio.cpp  gpio.h  gpio_driver.cpp  gpio_driver.h  gpio_driver_hal.cpp  main.cpp  rcc.cpp  rcc.h  runtime.cpp  runtime.h  startup.cpp  sysclock_reg.h  utils.h
unit_tests/: CMakeLists.txt
unit_tests/gpio/: CMakeLists.txt  common.cpp  common.h  configure_input_tests.cpp  configure_output_tests.cpp  gpio_output_tests.cpp  test.cpp
unit_tests/unit_tests_common/: CMakeLists.txt  test_utils.cpp  test_utils.h
